# Bestiary-Registry

./: .gitignore
.github/workflows/: ci.yml
backend/: pyproject.toml  seed_classes.py
