[project]
name = "ex1-fastapi-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.2",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "httpx>=0.28.1",
    "imagekitio>=4.2.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.8",
    "sqlmodel>=0.0.27",
    "streamlit>=1.52.2",
    "streamlit-keyup>=0.3.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]